--- a/src/app/solvers/semaphore/semaphore.component.html
+++ b/src/app/solvers/semaphore/semaphore.component.html
@@ -28,7 +28,7 @@
     </mat-grid-tile>
 </mat-grid-list>
 <div class="button-group">
-    <button mat-icon-button color="primary" (click)="add()">
+    <button mat-icon-button color="primary" (click)="add()" [disabled]="!valid()">
         <mat-icon>add</mat-icon>    
     </button>
     <button mat-icon-button color="primary" (click)="remove()">
