--- a/src/app/solvers/semaphore/semaphore.component.html
+++ b/src/app/solvers/semaphore/semaphore.component.html
@@ -27,6 +27,9 @@
         <mat-checkbox [(ngModel)]="southeast" (change)="check()"></mat-checkbox>            
     </mat-grid-tile>
 </mat-grid-list>
+<mat-form-field>
+    <input matInput [(ngModel)]="answer">
+</mat-form-field>
 <div class="button-group">
     <button mat-icon-button color="primary" (click)="add()" [disabled]="!valid()">
         <mat-icon>add</mat-icon>    
@@ -35,6 +38,3 @@
         <mat-icon>undo</mat-icon>    
     </button>
 </div>
-<mat-form-field>
-    <input matInput [(value)]="answer">
-</mat-form-field>
