--- a/src/app/toolbar.component.html
+++ b/src/app/toolbar.component.html
@@ -7,5 +7,7 @@
   </button>
   <span>The Puzzle Buddy</span>
   <span class="example-spacer"></span>  
-  <mat-icon>settings</mat-icon>  
+  <button mat-icon-button>
+      <mat-icon>settings</mat-icon>
+  </button>
 </mat-toolbar>
